--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>HW 1 CMPM 163</title>
+	</head>
+<body>
+    <a href="google.com">Part 1</a>
+</body>
